Add new publication and change some css colors

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@inproceedings{HPCA.2026.ReScue,
+  abbr={HPCA},
+  title={ReScue: Reliable and secure CXL memory},
+  author={Song, Chihun and Cruz, Austin Antony and Kim, Michael Jaemin and Wi, Minbok and Ye, Gaohan and Kim, Kyungsan and Lee, Sangyeol and Ahn, Jung Ho and Kim, Nam Sung},
+  abstract={},
+  booktitle={IEEE International Symposium on High-Performance Computer Architecture (HPCA)},
+  year={2026},
+  month={March},
+  publisher={IEEE},
+  selected={true}
+}
+
 @article{LCA.2024.3397747,
   abbr={CAL},
   title={Exploiting Intel Advanced Matrix Extensions (AMX) for Large Language Model Inference},
